--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
             }
         }
 
-        // Função para verificar se o IP está dentro do intervalo permitido
-        function isIPInRange(ip, range) {
-            const ipParts = ip.split('.').map(Number);
-            const [rangeStart, rangeEnd] = range.split('-').map(r => r.split('.').map(Number));
-            
-            const ipNum = ipParts[0] * 256 ** 3 + ipParts[1] * 256 ** 2 + ipParts[2] * 256 + ipParts[3];
-            const rangeStartNum = rangeStart[0] * 256 ** 3 + rangeStart[1] * 256 ** 2 + rangeStart[2] * 256 + rangeStart[3];
-            const rangeEndNum = rangeEnd[0] * 256 ** 3 + rangeEnd[1] * 256 ** 2 + rangeEnd[2] * 256 + rangeEnd[3];
+        // Função para converter IP para número
+        function ipToNumber(ip) {
+            return ip.split('.').reduce((acc, octet) => (acc << 8) + parseInt(octet, 10), 0);
+        }
 
-            return ipNum >= rangeStartNum && ipNum <= rangeEndNum;
+        // Função para verificar se o IP está na sub-rede
+        function isIPInSubnet(ip, subnet) {
+            const [subnetIP, prefixLength] = subnet.split('/');
+            const subnetNumber = ipToNumber(subnetIP);
+            const ipNumber = ipToNumber(ip);
+            const mask = 0xFFFFFFFF << (32 - prefixLength);
+            return (ipNumber & mask) === (subnetNumber & mask);
         }
 
         // Verifica o IP do usuário
         async function checkAccess() {
             const userIP = await getUserIP();
-            const allowedRange = '192.168.101.0-192.168.101.255'; // Faixa de IP permitida
+            const allowedSubnet = '192.168.101.0/24'; // Sub-rede permitida
 
-            if (userIP && isIPInRange(userIP, allowedRange)) {
+            if (userIP && isIPInSubnet(userIP, allowedSubnet)) {
                 window.location.href = 'https://forms.gle/2zRjS912gSFG5tVk9'; // Link do formulário
             } else {
                 document.body.innerHTML += '<p>Você não está na rede da escola. O acesso ao formulário foi bloqueado.</p>';
