--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p>7.2. O usuário é responsável por revisar periodicamente as atualizações.</p>
 
         <h3>8. Contato e Suporte</h3>
-        <p>8.1. Para suporte, acesse nosso servidor no Discord: <a href="SEU_LINK_DISCORD" target="_blank" style="color: #00aaff;">Clique Aqui</a></p>
+        <p>8.1. Para suporte, acesse nosso servidor no Discord: <a href="https://discord.gg/7FPQbStsqj" target="_blank" style="color: #00aaff;">Clique Aqui</a></p>
     </div>
 
     <h2>2. Informe seu e-mail para continuar</h2>
